--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tempest</title>
     <link rel="stylesheet" type="text/css" href="style.css">
      <script src="script.js"></script>
@@ -11,8 +12,7 @@
     <div class="section-one">
       <h1 class="title">TEMPEST</h1>
       <p class="subtitle">Real time weather updates anytime, anywhere.</p>
-      <input type="text" placeholder="Search..." list="anrede">
-      <datalist id="anrede"></datalist>
+      <input type="text" placeholder="Search...">
     </div>
   </body>
 </html>
